--- a/.eslintrc
+++ b/.eslintrc
@@ -51,6 +51,7 @@
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": ["error", {"extensions": [".tsx"]}],
     "jsx-a11y/no-static-element-interactions": "off",
-    "jsx-a11y/click-events-have-key-events": "off"
+    "jsx-a11y/click-events-have-key-events": "off",
+    "object-curly-newline": "off"
   }
 }
