--- a/package.json
+++ b/package.json
@@ -49,12 +49,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0",
     "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.1",
     "@types/react": "^17.0.14",
@@ -66,7 +65,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-lodash": "^3.3.4",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "cssnano-preset-advanced": "^5.1.3",
@@ -91,11 +90,11 @@
     "react-refresh": "^0.10.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
-    "typescript": "^4.3.5",
+    "typescript": "^4.4.2",
     "webpack": "^5.51.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
+    "webpack-dev-server": "^4.1.1",
     "webpack-merge": "^5.8.0",
     "webpackbar": "^5.0.0-3"
   }
